<resources>
    <!-- splashScreen Strings -->
    <string name="app_slogan">Nyamasheki\'s Developer Team</string>
    <string name="app_motto">Medical Care</string>
    <string name="app_slogan_description">Get Better Soon!</string>

    <!-- multi_lines Strings -->
    <string name="multiText">TextView</string>

    <!-- Register and login Page Strings -->
    <string name="app_login">LOGOUT</string>
    <string name="login">Login</string>
    <string name="logins">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="new_account">Create New Account</string>
    <string name="register">Register</string>
    <string name="contact">Contact</string>
    <string name="fullName">Full name</string>
    <string name="username">Username</string>
    <string name="buttonRegister">REGISTER</string>
    <string name="haveAccount">Already have an Account?</string>
    <string name="sign_in_with">or Sign in with</string>
    <string name="fb">Facebook Logo</string>
    <string name="twitter">Twitter Logo</string>
    <string name="google">Google Logo</string>
    <string name="medicalCare">MEDICAL CARE</string>
    <string name="birthdate">Birthdate</string>

    <!-- activity_order_details Page Strings -->
    <string name="back">BACK</string>
    <string name="orderDetails">ORDER DETAILS</string>
    <string name="orderDetailsImage">order Details Image</string>
    <string name="healthArticles">HEALTH ARTICLES</string>
    <string name="healthArticlesImage">health articles image</string>
    <string name="findDoctorImage">find doctor image</string>
    <string name="buyMedicine">BUY MEDICINE</string>
    <string name="buyMedicineImage">buy medicine image</string>

    <!-- main Page Strings -->
    <string name="findDoctor">FIND DOCTOR</string>
    <string name="infoImage">info image</string>
    <string name="labTest">LAB TEST</string>
    <string name="labTestImage">lab test image</string>
    <string name="open_navigation_drawer">Open navigation drawer</string>
    <string name="close_navigation_drawer">Close navigation drawer</string>

    <!-- lab test details Strings -->
    <string name="addToCart">ADD TO CART</string>
    <string name="deliverLocation">Deliver Location: Mwanza</string>
    <string name="labTestPackage">Lab Test and Packages</string>
    <string name="showText">The texts are shown here</string>

    <!-- lab test book strings -->
    <string name="book">BOOK</string>
    <string name="subtitle">Please Fill All Details for Booking</string>
    <string name="address">Address</string>
    <string name="pinCode">Pin Code</string>

    <!-- lab test strings -->
    <string name="goToCart">GO TO CART</string>

    <!-- health articles details strings-->
    <string name="healthArticle">Health Articles</string>
    <string name="imageForArticles">Image For Articles</string>

    <!-- find doctors strings -->
    <string name="topDoctors">Top Doctors</string>
    <string name="image">image</string>
    <string name="cardiologists">CARDIOLOGISTS</string>
    <string name="surgeon">SURGEON</string>
    <string name="dietcian">DIETICIAN</string>
    <string name="dentist">DENTIST</string>
    <string name="familyPhysician">FAMILY PHYSICIAN</string>

    <!-- cart lab strings -->
    <string name="date">22/07/2023</string>
    <string name="checkOut">CHECKOUT</string>
    <string name="time">13:00</string>
    <string name="selectDate">Select Date</string>
    <string name="selectTime">Select Time</string>
    <string name="costString">Total Cost: 0/=</string>
    <string name="labTestCartItems">Lab Test Cart Items</string>

    <!-- cart buy medicine -->
    <string name="buyMedicineCartItems">Buy Medicine Cart Items</string>
    <string name="selectDeliveryDate">Select Delivery Date</string>

    <!-- buy medicine details strings -->


    <!-- book appointment strings -->
    <string name="bookAppointment">BOOK APPOINTMENT</string>
    <string name="fees">Fees</string>

    <!-- buy medicine book strings -->
    <string name="bookingDetails">Please Fill All Details for Booking</string>

    <!-- menu strings -->
    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="BMI">BMI CALCULATOR</string>
    <string name="current_age">CURRENT AGE</string>
    <string name="profile">PROFILE</string>
    <string name="logout">LOGOUT</string>

    <!-- other strings -->
    <string name="app_name">MedicalCare</string>
    <string name="image_logo_description">Logo Image</string>
    <string name="app_welcome">Welcome To Medical Care</string>
    <string name="phoneNumber">Verify Phone Number</string>
    <string name="code">Enter Verification code</string>
    <string name="verify">VERIFY</string>
    <string name="app_motto_description">Your description here</string>

    <!-- age calculator strings -->
    <string name="cal">CALCULATE</string>
    <string name="dd">DD</string>
    <string name="mm">MM</string>
    <string name="yy">YYYY</string>
    <string name="ageOn">Age On</string>
    <string name="dob">DOB</string>
    <string name="year">Year</string>
    <string name="zero">Zero</string>
    <string name="month">Month</string>
    <string name="days">Days</string>

    <!-- BMI calculator -->
    <string name="unit">Cm</string>
    <string name="femaletext">Female</string>
    <string name="age">Age</string>
    <string name="startingheight">170</string>
    <string name="startingweight">55</string>
    <string name="startingage">22</string>
    <string name="todo">TODO</string>
    <string name="height">Height</string>
    <string name="calculate_your_bmi">Calculate BMI</string>
    <string name="weight">Weight</string>
    <string name="male">Male</string>
    <string name="num">22</string>
    <string name="gender">Gender</string>
    <string name="intro">Your BMI Category Is</string>
    <string name="reCal">RECALCULATE YOUR BMI</string>

    <!-- string resources for the BMI calculation -->
    <string name="severe">Severe Thinness</string>
    <string name="moderate">Moderate Thinness</string>
    <string name="normal">Normal</string>
    <string name="overWeight">Overweight</string>
    <string name="obeseI">Obese Class I</string>
    <string name="obeseII">Obese Class II</string>

</resources>