<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@color/white"
    android:paddingStart="15dp"
    android:paddingEnd="0dp">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/menu_slogan"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="7dp"
        android:text="@string/app_slogan_description"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/menu_slogan"
        android:layout_width="219dp"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="20dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/app_motto" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="112dp"
        android:layout_height="52dp"
        android:layout_above="@+id/app_name"
        android:layout_alignParentStart="true"
        android:layout_marginStart="9dp"
        android:layout_marginBottom="6dp"
        android:contentDescription="@string/image"
        android:src="@drawable/baseline_medical_services_24" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="160dp"
        android:layout_height="175dp"
        android:src="@drawable/splash1"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/image"/>

</RelativeLayout>