<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".LabTestDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Your existing UI elements -->
        <TextView
            android:id="@+id/textViewDDName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:text="@string/app_motto"
            android:textColor="@color/lessDeepYellow"
            android:textSize="40sp"
            android:fontFamily="@font/alegreya_bold"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textViewDDTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.675" />

        <TextView
            android:id="@+id/textViewDDTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:text="@string/deliverLocation"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/roboto_medium"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textViewLDPackageName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewLDPackageName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:text="@string/labTestPackage"
            android:textColor="@color/yellowLight"
            android:fontFamily="@font/roboto_medium"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editTextLDTextMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewLDTotalCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="68dp"
            android:text="@string/multiText"
            android:textColor="@color/purpleDark"
            android:textSize="24sp"
            android:fontFamily="@font/roboto_medium"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/buttonLDAddToCart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.54"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextLDTextMultiLine"
            android:layout_width="318dp"
            android:layout_height="359dp"
            android:layout_margin="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/showText"
            android:autofillHints="multilineText"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/textViewLDTotalCost"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.849"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/buttonLDAddToCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginBottom="4dp"
            android:text="@string/addToCart"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/white"
            android:background="@drawable/btn_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonLDGoBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/back"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/white"
            android:background="@drawable/btn_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintStart_toEndOf="@+id/buttonLDAddToCart" />
        <!-- Add any additional views here -->

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
