<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".HealthArticlesDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Your existing UI elements -->
        <TextView
            android:id="@+id/textViewHADTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/healthArticle"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_medium"
            app:layout_constraintEnd_toEndOf="@+id/imageViewHAD"
            app:layout_constraintHorizontal_bias="0.54"
            app:layout_constraintStart_toStartOf="@+id/imageViewHAD"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/app_motto"
            android:fontFamily="@font/alegreya_bold"
            android:textColor="@color/lessDeepYellow"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textViewHADTitle"
            app:layout_constraintHorizontal_bias="0.595"
            app:layout_constraintStart_toStartOf="@+id/textViewHADTitle"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonHADBack"
            android:layout_width="120dp"
            android:layout_height="58dp"
            android:background="@drawable/btn_bg"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewHAD"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/imageViewHAD"
            android:layout_width="373dp"
            android:layout_height="472dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/imageForArticles"
            app:layout_constraintEnd_toEndOf="@+id/buttonHADBack"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="@+id/buttonHADBack"
            app:layout_constraintTop_toBottomOf="@+id/textViewHADTitle"
            app:srcCompat="@drawable/health1" />
        <!-- Add any additional views here -->

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
